--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: "https://walshmdm.co.uk"
 lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: Europe/London
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
