--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: Europe/London
 
 title: WalshMDM | M365 & MDM # the main title
 
-tagline: M365 and MDM focused blog, documenting as I learn! # it will display as the sub-title
+tagline: Blogging shite from working with Intune # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   M365 and MDM focused blog, documenting as I learn!
